--- a/project.config.json
+++ b/project.config.json
@@ -58,7 +58,14 @@
 		},
 		"miniprogram": {
 			"current": -1,
-			"list": []
+			"list": [
+				{
+					"id": -1,
+					"name": "pages/ps/ps",
+					"pathName": "pages/ps/ps",
+					"scene": null
+				}
+			]
 		}
 	}
 }
